# hdaw

./: .qmlls.ini  AGENTS.md  Cargo.toml  build.rs
.opencode/plans/: 2026-05-26-qt-migration-design.md
docs/: PROGRESS.md
docs/superpowers/specs/: 2026-05-23-audio-playback-design.md  2026-05-23-editing-ui-interactions-design.md  2026-05-23-playhead-cursor-design.md  2026-05-23-undo-editing-tools-design.md  2026-05-26-automation-mvp-design.md  2026-05-26-effect-param-automation-design.md  2026-05-26-phase5-unified-main-window-design.md  2026-05-26-qt-stage4-keyboard-shortcuts-design.md  2026-05-26-qt-stage5-remove-slint-design.md
src/: app.rs  main.rs
src/app/: callbacks.rs  drag.rs  input.rs  io.rs  mod.rs
src/audio/: buffer.rs  engine.rs  loader.rs  mixer.rs  mod.rs  playback.rs  pool.rs  record.rs  transport.rs
src/audio/effects/: compressor.rs  delay.rs  eq.rs  factory.rs  mod.rs  reverb.rs
src/project/: automation.rs  bus.rs  clip.rs  editing.rs  io.rs  mod.rs  track.rs  undo.rs
src/ui/: main_window.rs  mixer.rs  mod.rs  timeline.rs  transport.rs  waveform.rs
src/ui/components/: mod.rs
src/ui_qt/: FXEditor.qml  MenuBar.qml  MixerPanel.qml  PoolPanel.qml  TimelineArea.qml  ToolBar.qml  effects.rs  main.qml  mixer.rs  mod.rs  pool.rs  shortcut_handler.rs  state.rs  state_bridge.rs  timeline.rs  transport.qml
src/utils/: mod.rs  timestretch.rs  waveform.rs
