[package]
name = "hdaw"
version = "0.1.0"
edition = "2021"
description = "HDAW - Digital Audio Workstation"
authors = ["Hap"]
license = "MIT"

[dependencies]
# GUI Framework
slint = "1.16"

# Audio I/O
cpal = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"

# Async
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Audio file loading
hound = "3.5"

# File dialog
rfd = "0.15"

# DSP
timestretch = "0.4"
rustfft = "6.2"
spectrum-analyzer = "1.7"
dasp = "0.11"
crossbeam = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[profile.release]
opt-level = 3